# renewable-huber

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  gpu-validation.yml
docs/: api.md  architecture.md  gpu-performance.md  release-checklist.md  support-matrix.md
scripts/benchmarks/: benchmark_cpu.py  benchmark_cuda_kernels.py  benchmark_numpy_cupy.py
scripts/renewable_huber/: run_500k_experiment.py
src/renewable_huber/: __init__.py  _version.py  cli.py  config.py  estimator.py  exceptions.py  serialization.py  state.py
src/renewable_huber/backends/: __init__.py  _cuda_kernels.py  cupy_backend.py  numpy_backend.py  protocol.py  tensorflow_backend.py  torch_backend.py
src/renewable_huber/core/: __init__.py  loss.py  update.py
src/renewable_huber/integrations/: __init__.py  sklearn.py
tests/: test_correctness_contract.py  test_cpu_optimizations.py  test_cuda_kernels.py  test_cupy_backend.py  test_data_integrations.py  test_estimator.py  test_loss.py  test_sklearn_integration.py  test_tensorflow_backend.py  test_torch_backend.py
