[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "renewable-huber"
version = "0.4.0"
description = "Renewable Huber regression for robust streaming-data estimation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Renewable Huber contributors" }]
keywords = ["robust-regression", "streaming-data", "huber", "online-learning"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
sklearn = ["scikit-learn>=1.3"]
gpu-cupy = ["cupy-cuda12x>=13"]
gpu-torch = ["torch>=2.2"]
gpu-tensorflow = ["tensorflow>=2.16"]
dev = ["build>=1.2", "pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.8"]

[project.urls]
Documentation = "https://github.com/Funtrollor/renewable-huber#readme"
Issues = "https://github.com/Funtrollor/renewable-huber/issues"
Source = "https://github.com/Funtrollor/renewable-huber"

[project.scripts]
renewable-huber = "renewable_huber.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/renewable_huber"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/renewable_huber",
  "/tests",
  "/docs/*.md",
  "/README.md",
  "/pyproject.toml",
]
exclude = [
  "/.agents/**",
  "/.gpu_test_packages/**",
  "/.venv/**",
  "/archives/**",
  "/data/**",
  "/dist/**",
  "/legacy/**",
  "/models/**",
  "/notebooks/**",
  "/scripts/**",
  "/docs/references/**",
  "/docs/reports/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
